--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "arbor-react": "^0.1.0",
+    "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -44,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.6",
     "@types/react-router-dom": "^5.1.8"
   }
 }
