--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,34 @@
 version: "3"
 
 services:
+  nginx:
+    image: nginx:alpine
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - "80:80"
+    depends_on:
+      - front
+    networks:
+      - internal
+
   front:
+    image: renatobritto/rarify-front
     container_name: front
     build: front
     volumes:
       - .:/front
     ports:
-      - "80:3000"
+      - "3000:3000"
     networks:
       - internal
+    depends_on:
+      - back
     environment:
       - BACKEND_LOCATION=http://back:7000
 
   back:
+    image: renatobritto/rarify-back
     container_name: back
     build: back
     volumes:
