--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,17 @@ version: "3"
 
 services:
   nginx:
-    image: nginx:alpine
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-    ports:
-      - "80:80"
-    depends_on:
-      - front
+    # image: renatobritto/rarify-nginx
+    build: nginx
     networks:
       - internal
+    depends_on:
+      - front
+    ports:
+      - "80:80"
 
   front:
-    image: renatobritto/rarify-front
+    # image: renatobritto/rarify-front
     container_name: front
     build: front
     volumes:
@@ -28,7 +27,7 @@ services:
       - BACKEND_LOCATION=http://back:7000
 
   back:
-    image: renatobritto/rarify-back
+    # image: renatobritto/rarify-back
     container_name: back
     build: back
     volumes:
